# incolume.py.bot0

./: README.md  main.py  pyproject.toml
coverage_report/: cov.xml
coverage_report/html/: d_18b18ae8588f2b69___init___py.html  d_d83ae3c75bd4f15a___init___py.html  d_d83ae3c75bd4f15a_bot_pyautogui_py.html  d_d886fb2ebfe3a6b8___init___py.html  d_d886fb2ebfe3a6b8_ex_schedule_py.html  d_d886fb2ebfe3a6b8_ex_schedule_threads_py.html  d_eb340b387ad34fb2___init___py.html  d_f1e0f6ebf9fe6ac0___init___py.html  index.html  status.json
incolume/py/prospect/bot/: bot_pyautogui.py  bot_reservapr_playwright.py  bot_reservapr_pyautogui.py  ex_schedule.py
incolume/py/prospect/bot0/: ex_schedule_threads.py
incolume/py/prospect/examples/: ex_schedule.py  ex_schedule_threads.py
tests/: test_package.py
