[tool.poetry]
name = "incolume-py-prospect-bot"
version = "0.1.0"
description = ""
authors = ["Britodfbr <britodfbr@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "incolume"}]

[tool.poetry.dependencies]
python = "^3.10"
schedule = "^1.2.0"


[tool.poetry.group.dev.dependencies]
taskipy = "^1.11.0"
pytest-cov = "^4.1.0"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
